--- a/SimpleSoundCloud/Base.lproj/Main.storyboard
+++ b/SimpleSoundCloud/Base.lproj/Main.storyboard
@@ -83,11 +83,11 @@
                                     <outlet property="delegate" destination="xWv-rn-Xfp" id="YJL-UB-wJx"/>
                                 </connections>
                             </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nvs-hJ-oKc">
-                                <rect key="frame" x="30" y="108" width="530" height="210"/>
+                            <view autoresizesSubviews="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nvs-hJ-oKc">
+                                <rect key="frame" x="30" y="108" width="530" height="200"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Mte-6A-cd3">
-                                        <rect key="frame" x="0.0" y="0.0" width="530" height="210"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="530" height="200"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <connections>
                                             <outlet property="dataSource" destination="xWv-rn-Xfp" id="AFQ-cw-tLH"/>
@@ -95,9 +95,8 @@
                                         </connections>
                                     </tableView>
                                 </subviews>
-                                <color key="backgroundColor" red="0.9589974832" green="0.13074095134144076" blue="0.75967075355842117" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="210" id="9ua-D8-jup"/>
+                                    <constraint firstAttribute="height" constant="200" id="9ua-D8-jup"/>
                                     <constraint firstItem="Mte-6A-cd3" firstAttribute="top" secondItem="Nvs-hJ-oKc" secondAttribute="top" id="AB1-3a-7u7"/>
                                     <constraint firstAttribute="bottom" secondItem="Mte-6A-cd3" secondAttribute="bottom" id="Fpf-7L-zDx"/>
                                     <constraint firstAttribute="trailing" secondItem="Mte-6A-cd3" secondAttribute="trailing" id="n9f-g2-qBT"/>
@@ -121,6 +120,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Searching" id="zYA-mC-rBD"/>
                     <connections>
+                        <outlet property="heightConstraint" destination="9ua-D8-jup" id="5kg-od-fdN"/>
                         <outlet property="searchBar" destination="JkD-hp-Jyo" id="1qs-41-XYr"/>
                         <outlet property="suggestTableView" destination="Mte-6A-cd3" id="JyG-21-3I1"/>
                         <outlet property="tableView" destination="E8t-m7-3O0" id="iMK-8Y-j2A"/>
