--- a/SimpleSoundCloud/Base.lproj/Main.storyboard
+++ b/SimpleSoundCloud/Base.lproj/Main.storyboard
@@ -120,7 +120,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Searching" id="zYA-mC-rBD"/>
                     <connections>
-                        <outlet property="heightConstraint" destination="9ua-D8-jup" id="5kg-od-fdN"/>
+                        <outlet property="heightConstraintForSuggestTableView" destination="9ua-D8-jup" id="Pf1-fr-m6N"/>
                         <outlet property="searchBar" destination="JkD-hp-Jyo" id="1qs-41-XYr"/>
                         <outlet property="suggestTableView" destination="Mte-6A-cd3" id="JyG-21-3I1"/>
                         <outlet property="tableView" destination="E8t-m7-3O0" id="iMK-8Y-j2A"/>
@@ -161,9 +161,9 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="e0Q-Xt-IXh" kind="relationship" relationship="viewControllers" id="hF6-4d-8OV"/>
-                        <segue destination="Yzj-op-DDf" kind="relationship" relationship="viewControllers" id="0nK-La-kHp"/>
                         <segue destination="N3l-6S-jPu" kind="relationship" relationship="viewControllers" id="al0-9u-KkO"/>
+                        <segue destination="Yzj-op-DDf" kind="relationship" relationship="viewControllers" id="0nK-La-kHp"/>
+                        <segue destination="e0Q-Xt-IXh" kind="relationship" relationship="viewControllers" id="hF6-4d-8OV"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
