player feature: add top and right for playerbar control

--- a/SimpleSoundCloud/Screens/Player/View/SSCPlayerBarViewController.xib
+++ b/SimpleSoundCloud/Screens/Player/View/SSCPlayerBarViewController.xib
@@ -15,20 +15,20 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VSl-bB-wOQ">
-                    <rect key="frame" x="67" y="285" width="54" height="26"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VSl-bB-wOQ">
+                    <rect key="frame" x="143" y="285" width="46" height="30"/>
                     <state key="normal" title="Button"/>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qZX-9A-trt">
-                    <rect key="frame" x="136" y="285" width="54" height="26"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qZX-9A-trt">
+                    <rect key="frame" x="209" y="285" width="46" height="30"/>
                     <state key="normal" title="Button"/>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M7q-jw-CIa">
-                    <rect key="frame" x="398" y="285" width="54" height="26"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M7q-jw-CIa">
+                    <rect key="frame" x="345" y="285" width="46" height="30"/>
                     <state key="normal" title="Button"/>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W9N-h2-DMy">
-                    <rect key="frame" x="467" y="285" width="54" height="26"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W9N-h2-DMy">
+                    <rect key="frame" x="411" y="285" width="46" height="30"/>
                     <state key="normal" title="Button"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YRc-IA-hJm">
@@ -43,8 +43,18 @@
             </subviews>
             <color key="backgroundColor" red="0.9589974832" green="0.110082844" blue="0.13517197989999999" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
+                <constraint firstItem="W9N-h2-DMy" firstAttribute="leading" secondItem="M7q-jw-CIa" secondAttribute="trailing" constant="20" id="3xf-7e-Sbv"/>
                 <constraint firstItem="YRc-IA-hJm" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="6fC-Kd-iH8"/>
+                <constraint firstItem="YRc-IA-hJm" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="IVi-hy-kOi"/>
+                <constraint firstItem="M7q-jw-CIa" firstAttribute="leading" secondItem="YRc-IA-hJm" secondAttribute="trailing" constant="20" id="JV8-iL-Clx"/>
+                <constraint firstItem="W9N-h2-DMy" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="UIE-CU-cN7"/>
+                <constraint firstItem="VSl-bB-wOQ" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="X1q-d8-GGe"/>
                 <constraint firstItem="YRc-IA-hJm" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="alh-9U-zha"/>
+                <constraint firstItem="YRc-IA-hJm" firstAttribute="leading" secondItem="qZX-9A-trt" secondAttribute="trailing" constant="20" id="app-Nl-zTo"/>
+                <constraint firstItem="qZX-9A-trt" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="m3V-ZI-4d7"/>
+                <constraint firstItem="qZX-9A-trt" firstAttribute="leading" secondItem="VSl-bB-wOQ" secondAttribute="trailing" constant="20" id="p8z-aM-DBV"/>
+                <constraint firstItem="M7q-jw-CIa" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="r8s-v6-ZA5"/>
+                <constraint firstItem="YRc-IA-hJm" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="vpy-BT-dki"/>
             </constraints>
         </view>
     </objects>
