--- a/SimpleSoundCloud/Screens/Player/Controller/SSCPlayerViewController.xib
+++ b/SimpleSoundCloud/Screens/Player/Controller/SSCPlayerViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -8,7 +8,15 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SSCPlayerViewController">
             <connections>
                 <outlet property="avatarPlayer" destination="lhM-3d-PxM" id="N54-iC-bAo"/>
+                <outlet property="endLabel" destination="lDw-4t-2F2" id="RKS-fk-QYJ"/>
+                <outlet property="forwardButton" destination="Lul-1l-a1v" id="U7a-ce-mxm"/>
+                <outlet property="loopButton" destination="hrM-2T-p1h" id="WG1-YS-7Kt"/>
+                <outlet property="playPauseButton" destination="1Fc-nS-fM6" id="37D-MM-r4J"/>
                 <outlet property="playerSlider" destination="xHg-d6-hRP" id="lRa-Zg-HXX"/>
+                <outlet property="rewardButton" destination="eEL-qY-5AS" id="zFI-kV-Lkf"/>
+                <outlet property="shuffleButton" destination="2er-h0-Pvt" id="TbI-Jt-XSG"/>
+                <outlet property="startLabel" destination="eJ2-V4-ZsN" id="2r6-Ke-eRj"/>
+                <outlet property="titleTrack" destination="Ge3-9l-H8s" id="2te-D7-rSk"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,27 +28,110 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lhM-3d-PxM">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="300"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="300" id="jaN-Kl-yty"/>
+                        <constraint firstAttribute="height" constant="300" id="Cxv-TL-P1t"/>
                     </constraints>
                 </imageView>
                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="xHg-d6-hRP">
-                    <rect key="frame" x="8" y="301" width="584" height="31"/>
+                    <rect key="frame" x="18" y="310" width="564" height="31"/>
                     <color key="minimumTrackTintColor" red="0.9589974832" green="0.110082844" blue="0.13517197989999999" alpha="1" colorSpace="calibratedRGB"/>
                     <color key="maximumTrackTintColor" red="0.36862745099999999" green="0.71372549019999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <color key="thumbTintColor" red="0.30980392159999998" green="0.64705882349999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                 </slider>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eJ2-V4-ZsN">
+                    <rect key="frame" x="20" y="341" width="46" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="11:11" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lDw-4t-2F2">
+                    <rect key="frame" x="545" y="341" width="35" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Track name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ge3-9l-H8s">
+                    <rect key="frame" x="255" y="370" width="90" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hhW-pO-4Di">
+                    <rect key="frame" x="0.0" y="472" width="600" height="128"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eEL-qY-5AS">
+                            <rect key="frame" x="219" y="52" width="32" height="24"/>
+                            <state key="normal" image="rewind.png"/>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lul-1l-a1v">
+                            <rect key="frame" x="349" y="52" width="32" height="24"/>
+                            <state key="normal" image="forward.png"/>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2er-h0-Pvt">
+                            <rect key="frame" x="20" y="50" width="32" height="29"/>
+                            <state key="normal" image="shuffle.png"/>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Fc-nS-fM6">
+                            <rect key="frame" x="274" y="38" width="52" height="52"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="52" id="Uqb-c2-2GN"/>
+                                <constraint firstAttribute="height" constant="52" id="na4-Io-8SN"/>
+                            </constraints>
+                            <size key="titleShadowOffset" width="1" height="1"/>
+                            <state key="normal" image="play_stop_blue.png"/>
+                            <state key="selected" image="pause_blue.png"/>
+                            <connections>
+                                <action selector="playPauseButtonClick:" destination="-1" eventType="touchUpInside" id="mpS-zI-Fn6"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hrM-2T-p1h">
+                            <rect key="frame" x="548" y="51" width="32" height="26"/>
+                            <state key="normal" image="loop.png"/>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="1Fc-nS-fM6" firstAttribute="centerX" secondItem="hhW-pO-4Di" secondAttribute="centerX" id="5eG-4s-3fp"/>
+                        <constraint firstAttribute="height" constant="128" id="6a3-Ql-3po"/>
+                        <constraint firstAttribute="trailing" secondItem="hrM-2T-p1h" secondAttribute="trailing" constant="20" id="DqG-U2-awb"/>
+                        <constraint firstItem="1Fc-nS-fM6" firstAttribute="centerY" secondItem="hhW-pO-4Di" secondAttribute="centerY" id="G9K-iO-Smm"/>
+                        <constraint firstItem="Lul-1l-a1v" firstAttribute="centerY" secondItem="hhW-pO-4Di" secondAttribute="centerY" id="Jbt-Gd-MpG"/>
+                        <constraint firstItem="eEL-qY-5AS" firstAttribute="centerX" secondItem="hhW-pO-4Di" secondAttribute="centerX" constant="-65" id="PJT-Ut-QKj"/>
+                        <constraint firstItem="eEL-qY-5AS" firstAttribute="centerY" secondItem="hhW-pO-4Di" secondAttribute="centerY" id="T6L-hp-eYO"/>
+                        <constraint firstItem="hrM-2T-p1h" firstAttribute="centerY" secondItem="hhW-pO-4Di" secondAttribute="centerY" id="Zb7-az-8V7"/>
+                        <constraint firstItem="2er-h0-Pvt" firstAttribute="leading" secondItem="hhW-pO-4Di" secondAttribute="leading" constant="20" id="dE9-JE-V3E"/>
+                        <constraint firstItem="2er-h0-Pvt" firstAttribute="centerY" secondItem="hhW-pO-4Di" secondAttribute="centerY" id="dF0-V5-lNU"/>
+                        <constraint firstItem="Lul-1l-a1v" firstAttribute="centerX" secondItem="hhW-pO-4Di" secondAttribute="centerX" constant="65" id="uzp-hZ-yzQ"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="lhM-3d-PxM" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="9yR-94-EwV"/>
-                <constraint firstItem="xHg-d6-hRP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="Sde-tR-1q4"/>
-                <constraint firstItem="xHg-d6-hRP" firstAttribute="top" secondItem="lhM-3d-PxM" secondAttribute="bottom" constant="1" id="dz3-dM-Lqh"/>
-                <constraint firstAttribute="trailing" secondItem="xHg-d6-hRP" secondAttribute="trailing" constant="10" id="jZU-M1-RLu"/>
-                <constraint firstItem="lhM-3d-PxM" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="quL-If-VdE"/>
-                <constraint firstAttribute="trailing" secondItem="lhM-3d-PxM" secondAttribute="trailing" id="wiv-L5-pG7"/>
+                <constraint firstItem="Ge3-9l-H8s" firstAttribute="top" secondItem="xHg-d6-hRP" secondAttribute="bottom" constant="30" id="52G-6z-RiH"/>
+                <constraint firstAttribute="trailing" secondItem="hhW-pO-4Di" secondAttribute="trailing" id="Epe-tv-w2N"/>
+                <constraint firstItem="xHg-d6-hRP" firstAttribute="top" secondItem="lhM-3d-PxM" secondAttribute="bottom" constant="10" id="FFh-UL-ox4"/>
+                <constraint firstItem="lDw-4t-2F2" firstAttribute="top" secondItem="xHg-d6-hRP" secondAttribute="bottom" constant="1" id="IXy-Ij-Eci"/>
+                <constraint firstAttribute="trailing" secondItem="xHg-d6-hRP" secondAttribute="trailing" constant="20" id="K0o-5T-hks"/>
+                <constraint firstItem="hhW-pO-4Di" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Q87-PA-4wt"/>
+                <constraint firstItem="Ge3-9l-H8s" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="VZy-b9-SIC"/>
+                <constraint firstItem="xHg-d6-hRP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="aZm-NX-7Dn"/>
+                <constraint firstItem="lhM-3d-PxM" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="dow-OD-5pV"/>
+                <constraint firstItem="eJ2-V4-ZsN" firstAttribute="top" secondItem="xHg-d6-hRP" secondAttribute="bottom" constant="1" id="hGj-Bg-g60"/>
+                <constraint firstItem="lhM-3d-PxM" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="lOh-Eq-iXg"/>
+                <constraint firstAttribute="trailing" secondItem="lhM-3d-PxM" secondAttribute="trailing" id="ouG-5s-oFy"/>
+                <constraint firstItem="eJ2-V4-ZsN" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="vBw-Hw-SDG"/>
+                <constraint firstAttribute="bottom" secondItem="hhW-pO-4Di" secondAttribute="bottom" id="vTU-gu-4dh"/>
+                <constraint firstAttribute="trailing" secondItem="lDw-4t-2F2" secondAttribute="trailing" constant="20" id="xHO-1J-JHm"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <point key="canvasLocation" x="451" y="380"/>
         </view>
     </objects>
+    <resources>
+        <image name="forward.png" width="32" height="24"/>
+        <image name="loop.png" width="32" height="26"/>
+        <image name="pause_blue.png" width="170" height="170"/>
+        <image name="play_stop_blue.png" width="170" height="170"/>
+        <image name="rewind.png" width="32" height="24"/>
+        <image name="shuffle.png" width="32" height="29"/>
+    </resources>
 </document>
